<resources>
    <string name="app_name">Guess the number</string>
    <string name="menu_background">menu_background</string>
    <string name="main_label">Menu</string>
    <string name="btn_exit">btn_exit</string>
    <string name="btn_start">btn_start</string>
    <string name="number">Number</string>
    <string name="guess_text">Number from 1 to 100</string>
    <string name="check">Check</string>
    <string name="first_text">Can you guess?</string>
    <string name="result">Result</string>
    <string name="greater_number_message">The guessed number is greater than</string>
    <string name="smaller_number_message">The guessed number is less than</string>
    <string name="enter_number_message">Enter a number</string>
    <string name="resultGame">Result Game</string>
    <string name="congratulations_message">Congratulations! You guessed the number %1$d in %2$d attempts</string>
    <string name="count_guess_number">You guessed the number in %1$d attempts</string>
</resources>