<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_game"
    tools:context=".GameActivity">

    <View
        android:id="@+id/firstSection"
        android:layout_width="@dimen/dp320"
        android:layout_height="@dimen/dp575"
        android:alpha="0.9"
        android:background="@drawable/section_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/first_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp125"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/first_text"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/firstSection"
        app:layout_constraintStart_toStartOf="@+id/firstSection"
        app:layout_constraintTop_toTopOf="@+id/firstSection" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:fontFamily="@font/montserrat_italic"
        android:text="@string/guess_text"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/firstSection"
        app:layout_constraintStart_toStartOf="@+id/firstSection"
        app:layout_constraintTop_toBottomOf="@+id/first_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/num_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginTop="@dimen/dp50"
        android:layout_marginEnd="@dimen/dp20"
        android:hint="@string/number"
        app:layout_constraintEnd_toEndOf="@+id/firstSection"
        app:layout_constraintStart_toStartOf="@+id/firstSection"
        app:layout_constraintTop_toBottomOf="@+id/description_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/number_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:ignore="TextContrastCheck">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/checkButton"
        android:layout_width="@dimen/dp180"
        android:layout_height="@dimen/dp50"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/check"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:icon="@drawable/ic_baseline_cached_24"
        app:iconGravity="start"
        app:iconPadding="@dimen/dp4"
        app:iconSize="@dimen/dp20"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resultButton"
        android:layout_width="@dimen/dp180"
        android:layout_height="@dimen/dp50"
        android:layout_marginTop="@dimen/dp10"
        android:backgroundTint="@color/yellow"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="invisible"
        app:icon="@drawable/ic_baseline_query_stats_24"
        app:iconGravity="start"
        app:iconPadding="@dimen/dp4"
        app:iconSize="@dimen/dp20"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/firstSection"
        app:layout_constraintStart_toStartOf="@+id/firstSection"
        app:layout_constraintTop_toBottomOf="@+id/checkButton" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="@dimen/dp250"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/montserrat_italic"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/firstSection"
        app:layout_constraintStart_toStartOf="@+id/firstSection"
        app:layout_constraintTop_toBottomOf="@+id/num_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>